gcc/testsuite/g++.dg/other/pr84792-2.C
struct A {};

typedef struct
{
  void foo() {}
} A::B;  // { dg-error "typedef" }
